--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,54 +6,10 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <android.support.v7.widget.CardView
+    <GridView
+        android:id="@+id/gridView"
         android:layout_width="368dp"
-        android:layout_height="177dp"
-        app:cardBackgroundColor="@android:color/holo_red_light"
+        android:layout_height="495dp"
         tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="125dp">
-
-        <TextView
-            android:id="@+id/NameTextView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Celsuss"
-            android:textStyle="bold"
-            android:textSize="20dp"
-            android:textAlignment="center" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="25dp"
-            android:layout_marginBottom="25dp"
-            android:gravity="center"
-            android:orientation="horizontal">
-
-            <ImageButton
-                android:id="@+id/addButton"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:layout_weight="1"
-                app:srcCompat="@drawable/ic_add_black_24dp" />
-
-                <TextView
-                    android:id="@+id/LifeTextView"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="40"
-                    android:textSize="30dp"
-                    android:textStyle="bold"
-                    android:textAlignment="center"/>
-
-            <ImageButton
-                android:id="@+id/subtractButton"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:layout_weight="1"
-                app:srcCompat="@drawable/ic_remove_black_24dp" />
-        </LinearLayout>
-    </android.support.v7.widget.CardView>
+        tools:layout_editor_absoluteY="8dp" />
 </android.support.constraint.ConstraintLayout>
