--- a/app/src/main/res/layout/two_vs_two.xml
+++ b/app/src/main/res/layout/two_vs_two.xml
@@ -25,7 +25,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:layout_weight="1"
-                android:background=""
+                android:background="#ffffff"
                 app:srcCompat="@drawable/ic_add_black_24dp" />
 
             <LinearLayout
@@ -60,7 +60,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:layout_weight="1"
-                android:background=""
+                android:background="#ffffff"
                 app:srcCompat="@drawable/ic_remove_black_24dp" />
         </LinearLayout>
 
@@ -79,7 +79,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:layout_weight="1"
-                android:background=""
+                android:background="#ffffff"
                 app:srcCompat="@drawable/ic_add_black_24dp" />
 
             <LinearLayout
@@ -114,7 +114,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:layout_weight="1"
-                android:background=""
+                android:background="#ffffff"
                 app:srcCompat="@drawable/ic_remove_black_24dp" />
         </LinearLayout>
 
